# Reznor-

./: .gitignore  .gitmodules  README.md  build.gradle  download_emulator_repos.sh  gradle.properties  settings.gradle
.github/: copilot-instructions.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/retroarch/: retroarch.cfg
app/src/main/assets/retroarch/overlays/: landscape.cfg
app/src/main/cpp/: CMakeLists.txt  libretro-integration.cpp
app/src/main/java/com/reznor/emulation/: MainActivity.kt  RomManager.kt
app/src/main/java/com/reznor/emulation/emulators/: Dolphin.kt  DuckStation.kt  GameNative.kt  Lemuroid.kt  PPSSPP.kt  Play.kt  Suyu.kt  Winlator.kt
app/src/main/java/com/reznor/emulation/libretro/: CoreManager.kt  EmulationActivity.kt  InputManager.kt  LibretroCore.kt  LibretroVideoView.kt  RomManager.kt  RomPickerContract.kt
app/src/main/java/com/reznor/emulation/model/: EmulatorComponent.kt  RomManager.kt
app/src/main/java/com/reznor/emulation/ui/: EmulationManagerScreen.kt  EmulatorComponentCard.kt
app/src/main/java/com/reznor/emulation/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/reznor/emulation/viewmodel/: EmulationManagerViewModel.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
app/src/test/java/com/reznor/emulation/: EmulatorComponentTest.kt
